--- a/index.html
+++ b/index.html
@@ -5,106 +5,104 @@
 		<title>HTML Academy: Седона</title>
 		</head>
 	<body>
-		<header class="main-header">
-			<div class="container">
-				<nav class="main-navigation">
-				<ul>
-					<li>
-						<a href="#">Информация</a>
-					</li>
-					<li>
-						<a href="#">Фото и видео</a>
-					</li>
-					<li>
-						<a href="#">Карта штата</a>
-					</li>
-					<li>
-						<a href="#">Гостиницы</a>
-					</li>
-					</ul>
-				</nav>
-				<div class="index-logo">
-					<img src="img/140x70" width="140" height="70" alt="Логотип">
-				</div>
-			</div>
-		</header>
-		<main class="container">
-			<p class="welcome">Welcome</p>
-			<p>to the gorgeous</p>
-			<h1>Sedona</h1>
-			<p class="because">&#8220;Because the grand canyon sucks!&#8221;</p>
-			<h2>Седона — небольшой городок в Фризоне, заслуживающий большего!</h2>
-			<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-			<section class="benefits">
-				<div class="benefits-text">
-					<h3>Настоящий городок</h3>
-					<span class="number">№1<span>
-					<p>Седона - не аттракион для туристов, там течет своя жизнь</p>
-				</div>
-				<img src="img/800x255" width="800" height="255">
-			</section>
-			<section class="benefits">
-				<div class="benefits-text">
-					<img src="img/80x80" width="80" height="80">
-					<h3>Жилье</h3>
-					<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-				</div>
-				<div class="benefits-text">
-					<img src="img/80x80" width="80" height="80">
-					<h3>Еда</h3>
-					<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-				</div>
-				<div class="benefits-text">
-					<img src="img/80x80" width="80" height="80">
-					<h3>Сувениры</h3>
-					<p>Не только китайского, но и местного производства!</p>
-				</div>
-			</section>
-			<section class="benefits">
-				<div class="benefits-text">
-					<h3>Там есть мост дьявола</h3>
-					<span class="number">№2<span>
-					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-				</div>
-				<img src="img/800x255" width="800" height="255">
-			</section>
-			<section class="benefits">
-				<div class="benefits-text">
-					<h3>Небольшая площадь</h3>
-					<span class="number">№3<span>
-					<p>Все достопримечательности находятся очень близко</p>
-				</div>
-				<div class="benefits-text">
-					<h3>Красивая дорога</h3>
-					<span class="number">№4<span>
-					<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-				</div>
-				<div class="benefits-text">
-					<h3>Мало туристов</h3>
-					<span class="number">№5<span>
-					<p>Большинство едет в Гранд Каньон и толпится там</p>
-				</div>
-			</section>
-			<section class="interested">
-				<h3>Заинтересовались?</h3>
-				<p>Укажите предполагаемые даты поездки<br>
-					И мы покажем вам лучшие предложения гостиниц в Седоне
-				</p>
-				<button class="btn" type="button">Поиск гостиницы в Седоне</button>
-				<form action="#" method="post">
-					<label for="date-arrival">Дата заезда</label>
-					<input id="date-arrival" type="date" name="date-arrival">
-					<label for="date-departure">Дата выезда</label>
-					<input id="date-departure" type="date" name="date-departure">
-					<label for="number-adult">Взрослые</label>
-					<input id="number-adult" type="number" name="number-adult">
-					<label for="number-children">Дети</label>
-					<input id="number-children" type="number" name="number-children">
-					<button type="submit">Найти</button>
-				</form>
-			</section>
-			<img src="img/1200x592" width="1200" height="592">
-		</main>
+		<div class="content">
+			<header class="main-header">
+					<nav class="main-navigation">
+						<a href="#">Логотип</a>
+						<ul>
+							<li>
+								<a href="#">Информация</a>
+							</li>
+							<li>
+								<a href="#">Фото и видео</a>
+							</li>
+							<li>
+								<a href="#">Карта штата</a>
+							</li>
+							<li>
+								<a href="#">Гостиницы</a>
+							</li>
+							</ul>
+					</nav>
+			</header>
+			<main class="container">
+				<p class="welcome">Welcome</p>
+				<p>to the gorgeous</p>
+				<h1>Sedona</h1>
+				<p class="because">&#8220;Because the grand canyon sucks!&#8221;</p>
+				<h2>Седона — небольшой городок в Фризоне, заслуживающий большего!</h2>
+				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+				<section class="benefits">
+					<div class="benefits-text">
+						<h3>Настоящий городок</h3>
+						<span class="number">№1<span>
+						<p>Седона - не аттракион для туристов, там течет своя жизнь</p>
+					</div>
+					<img src="img/800x255" width="800" height="255">
+				</section>
+				<section class="benefits">
+					<div class="benefits-text">
+						<img src="img/80x80" width="80" height="80">
+						<h3>Жилье</h3>
+						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+					</div>
+					<div class="benefits-text">
+						<img src="img/80x80" width="80" height="80">
+						<h3>Еда</h3>
+						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+					</div>
+					<div class="benefits-text">
+						<img src="img/80x80" width="80" height="80">
+						<h3>Сувениры</h3>
+						<p>Не только китайского, но и местного производства!</p>
+					</div>
+				</section>
+				<section class="benefits">
+					<div class="benefits-text">
+						<h3>Там есть мост дьявола</h3>
+						<span class="number">№2<span>
+						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					</div>
+					<img src="img/800x255" width="800" height="255">
+				</section>
+				<section class="benefits">
+					<div class="benefits-text">
+						<h3>Небольшая площадь</h3>
+						<span class="number">№3<span>
+						<p>Все достопримечательности находятся очень близко</p>
+					</div>
+					<div class="benefits-text">
+						<h3>Красивая дорога</h3>
+						<span class="number">№4<span>
+						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+					</div>
+					<div class="benefits-text">
+						<h3>Мало туристов</h3>
+						<span class="number">№5<span>
+						<p>Большинство едет в Гранд Каньон и толпится там</p>
+					</div>
+				</section>
+				<section class="interested">
+					<h3>Заинтересовались?</h3>
+					<p>Укажите предполагаемые даты поездки<br>
+						И мы покажем вам лучшие предложения гостиниц в Седоне
+					</p>
+					<form action="#" method="post">
+							<h3>Поиск гостиницы в Седоне</h3>
+						<label for="date-arrival">Дата заезда</label>
+						<input id="date-arrival" type="date" name="date-arrival">
+						<label for="date-departure">Дата выезда</label>
+						<input id="date-departure" type="date" name="date-departure">
+						<label for="number-adult">Взрослые</label>
+						<input id="number-adult" type="number" name="number-adult">
+						<label for="number-children">Дети</label>
+						<input id="number-children" type="number" name="number-children">
+						<button type="submit">Найти</button>
+					</form>
+				</section>
+				<img src="img/1200x592" width="1200" height="592">
+			</main>
+		</div>
 		<footer class="main-footer">
 			<section class="visit">
 				<p>#VisitSedona</p>
