--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
 				<section class="benefits">
 					<div class="benefits-text">
 						<h3>Настоящий городок</h3>
-						<span class="number">№1<span>
+						<span class="number">№1</span>
 						<p>Седона - не аттракион для туристов, там течет своя жизнь</p>
 					</div>
-					<img src="img/800x255" width="800" height="255">
+					<img src="img/800x255" width="800" height="255" alt="Настоящий городок">
 				</section>
 				<section class="benefits">
 					<div class="benefits-text">
-						<img src="img/80x80" width="80" height="80">
+						<img src="img/80x80" width="80" height="80" alt="Жилье">
 						<h3>Жилье</h3>
 						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 					</div>
 					<div class="benefits-text">
-						<img src="img/80x80" width="80" height="80">
+						<img src="img/80x80" width="80" height="80" alt="Еда">
 						<h3>Еда</h3>
 						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 					</div>
 					<div class="benefits-text">
-						<img src="img/80x80" width="80" height="80">
+						<img src="img/80x80" width="80" height="80" alt="Сувенир">
 						<h3>Сувениры</h3>
 						<p>Не только китайского, но и местного производства!</p>
 					</div>
@@ -62,25 +62,25 @@
 				<section class="benefits">
 					<div class="benefits-text">
 						<h3>Там есть мост дьявола</h3>
-						<span class="number">№2<span>
+						<span class="number">№2</span>
 						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
-					<img src="img/800x255" width="800" height="255">
+					<img src="img/800x255" width="800" height="255" alt="Мост дьявола">
 				</section>
 				<section class="benefits">
 					<div class="benefits-text">
 						<h3>Небольшая площадь</h3>
-						<span class="number">№3<span>
+						<span class="number">№3</span>
 						<p>Все достопримечательности находятся очень близко</p>
 					</div>
 					<div class="benefits-text">
 						<h3>Красивая дорога</h3>
-						<span class="number">№4<span>
+						<span class="number">№4</span>
 						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 					</div>
 					<div class="benefits-text">
 						<h3>Мало туристов</h3>
-						<span class="number">№5<span>
+						<span class="number">№5</span>
 						<p>Большинство едет в Гранд Каньон и толпится там</p>
 					</div>
 				</section>
@@ -102,7 +102,7 @@
 						<button type="submit">Найти</button>
 					</form>
 				</section>
-				<img src="img/1200x592" width="1200" height="592">
+				<img src="img/1200x592" width="1200" height="592" alt="Карта">
 			</main>
 		</div>
 		<footer class="main-footer">
