Заменил все теги
Заменил все теги figure на div
Заменил все теги figcaption на h3

--- a/hotels.html
+++ b/hotels.html
@@ -99,16 +99,15 @@
 						<p>Рейтинг: 8,5</p>
 					</div>
 				</article>
-				
 				<article class="booking">
-					<figure>
+					<div class="booking-hotel">
 						<img src="img/133x88" alt="Desert Quail Inn" width="133" height="88">
-						<figcaption>Desert Quail Inn</figcaption>
+						<h3>Desert Quail Inn</h3>
 						<p>Мотель</p>
 						<p>От 2 000 р.</p>
 						<a href="#">Подробнее</a>
 						<a href="#">Забронировать</a>
-					</figure>
+					</div>
 					<div class="rating">
 						<img src="img/16x16" alt="Звезда" width="16" height="16">
 						<img src="img/16x16" alt="Звезда" width="16" height="16">
@@ -116,14 +115,14 @@
 					</div>
 				</article>
 				<article class="booking">
-					<figure>
+					<div class="booking-hotel">
 						<img src="img/133x88" alt="Villas at Poco Diablo" width="133" height="88">
-						<figcaption>Villas at Poco Diablo</figcaption>
+						<h3>Villas at Poco Diablo</h3>
 						<p>Апартаменты</p>
 						<p>От 4 000 р.</p>
 						<a href="#">Подробнее</a>
 						<a href="#">Забронировать</a>
-					</figure>
+					</div>
 					<div class="rating">
 						<img src="img/16x16" alt="Звезда" width="16" height="16">
 						<img src="img/16x16" alt="Звезда" width="16" height="16">
