#20 Подготовка графики и текстовых стилей личного проекта

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>HTML Academy: Седона</title>
 		</head>
 	<body>
@@ -16,22 +17,20 @@
 								<a href="#">Фото и видео</a>
 							</li>
 							<li>
-								<a href="#">Логотип</a>
+								<a href="index.html">Логотип</a>
 							</li>
 							<li>
 								<a href="#">Карта штата</a>
 							</li>
 							<li>
-								<a href="#">Гостиницы</a>
+								<a href="hotels.html">Гостиницы</a>
 							</li>
 							</ul>
 					</nav>
 			</header>
 			<main class="container">
-				<p class="welcome">Welcome</p>
-				<p>to the gorgeous</p>
 				<h1>Sedona</h1>
-				<p class="because">&#8220;Because the grand canyon sucks!&#8221;</p>
+				<img src="img/sedona-welcome.png" width="458" height="352" alt="Welcome Sedona">
 				<h2>Седона — небольшой городок в Фризоне, заслуживающий большего!</h2>
 				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 				<section class="benefits">
@@ -40,21 +39,21 @@
 						<span class="number">№1</span>
 						<p>Седона - не аттракион для туристов, там течет своя жизнь</p>
 					</div>
-					<img src="img/800x255" width="800" height="255" alt="Настоящий городок">
+					<img src="img/real-city.jpg" width="800" height="256" alt="Настоящий городок">
 				</section>
 				<section class="benefits">
 					<div class="benefits-text">
-						<img src="img/80x80" width="80" height="80" alt="Жилье">
+						<img src="img/house.png" width="75" height="72" alt="Жилье">
 						<h3>Жилье</h3>
 						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 					</div>
 					<div class="benefits-text">
-						<img src="img/80x80" width="80" height="80" alt="Еда">
+						<img src="img/food.png" width="74" height="70" alt="Еда">
 						<h3>Еда</h3>
 						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 					</div>
 					<div class="benefits-text">
-						<img src="img/80x80" width="80" height="80" alt="Сувенир">
+						<img src="img/souvenir.png" width="64" height="76" alt="Сувенир">
 						<h3>Сувениры</h3>
 						<p>Не только китайского, но и местного производства!</p>
 					</div>
@@ -65,7 +64,7 @@
 						<span class="number">№2</span>
 						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
-					<img src="img/800x255" width="800" height="255" alt="Мост дьявола">
+					<img src="img/devil-bridge.jpg" width="800" height="256" alt="Мост дьявола">
 				</section>
 				<section class="benefits">
 					<div class="benefits-text">
@@ -85,7 +84,7 @@
 					</div>
 				</section>
 				<section class="interested">
-					<h3>Заинтересовались?</h3>
+					<h2>Заинтересовались?</h2>
 					<p>Укажите предполагаемые даты поездки<br>
 						И мы покажем вам лучшие предложения гостиниц в Седоне
 					</p>
@@ -102,7 +101,7 @@
 						<button type="submit">Найти</button>
 					</form>
 				</section>
-				<img src="img/1200x592" width="1200" height="592" alt="Карта">
+				<img src="img/map.jpg" width="1200" height="593" alt="Карта">
 			</main>
 		</div>
 		<footer class="main-footer">
@@ -117,7 +116,7 @@
 			<section class="footer-copyright">
 				<p>Website by</p>
 				<a class="btn" href="https://htmlacademy.ru">
-					<img src="img/115x40" width="115" height="40" alt="HTML Academy">
+					<img src="img/html-academy.svg" width="113" height="39" alt="HTML Academy">
 				</a>
 			</section>
 		</footer>
