--- a/hotels.html
+++ b/hotels.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>Выбор гостиницы в Седоне</title>
 	</head>
 	<body>
@@ -16,13 +17,13 @@
 								<a href="#">Фото и видео</a>
 							</li>
 							<li>
-								<a href="#">Логотип</a>
+								<a href="index.html">Логотип</a>
 							</li>
 							<li>
 								<a href="#">Карта штата</a>
 							</li>
 							<li>
-								<a href="#">Гостиницы</a>
+								<a href="hotels.html">Гостиницы</a>
 							</li>
 						</ul>
 					</nav>
@@ -75,58 +76,58 @@
 					</ul>
 					<div class="sorting-img">
 						<a href="#">
-							<img src="img/10x10" alt="Сотрировка по возрастанию" width="10" height="10">
+							<img src="img/sorting-increase.png" alt="Сотрировка по возрастанию" width="11" height="10">
 						</a>
 						<a href="#">
-							<img src="img/10x10" alt="Сортировка поубыванию" width="10" height="10">
+							<img src="img/sorting-decrease.png" alt="Сортировка поубыванию" width="11" height="10">
 						</a>
 					</div>
 				</section>
 				<article class="booking">
 					<div class="booking-hotel">
-						<img src="img/133x88" alt="Amara Resort & Spa" width="133" height="88">
-						<h3>Amara Resort & Spa</h3>
+						<img src="img/hotel-1.jpg" alt="Amara Resort & Spa" width="135" height="90">
+						<h2>Amara Resort & Spa</h2>
 						<p>Гостиница</p>
 						<p>От 3 500 р.</p>
 						<a href="#">Подробнее</a>
 						<a href="#">Забронировать</a>
 					</div>
 					<div class="rating">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
 						<p>Рейтинг: 8,5</p>
 					</div>
 				</article>
 				<article class="booking">
 					<div class="booking-hotel">
-						<img src="img/133x88" alt="Desert Quail Inn" width="133" height="88">
-						<h3>Desert Quail Inn</h3>
+						<img src="img/hotel-2.jpg" alt="Desert Quail Inn" width="135" height="90">
+						<h2>Desert Quail Inn</h2>
 						<p>Мотель</p>
 						<p>От 2 000 р.</p>
 						<a href="#">Подробнее</a>
 						<a href="#">Забронировать</a>
 					</div>
 					<div class="rating">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
 						<p>Рейтинг: 8,9</p>
 					</div>
 				</article>
 				<article class="booking">
 					<div class="booking-hotel">
-						<img src="img/133x88" alt="Villas at Poco Diablo" width="133" height="88">
-						<h3>Villas at Poco Diablo</h3>
+						<img src="img/hotel-3.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+						<h2>Villas at Poco Diablo</h2>
 						<p>Апартаменты</p>
 						<p>От 4 000 р.</p>
 						<a href="#">Подробнее</a>
 						<a href="#">Забронировать</a>
 					</div>
 					<div class="rating">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
-						<img src="img/16x16" alt="Звезда" width="16" height="16">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
+						<img src="img/star.png" alt="Звезда" width="18" height="17">
 						<p>Рейтинг: 9,2</p>
 					</div>
 				</article>
@@ -144,7 +145,7 @@
 			<section class="footer-copyright">
 				<p>Website by</p>
 				<a class="btn" href="https://htmlacademy.ru">
-					<img src="img/115x40" alt="HTML Academy" width="115" height="40">
+					<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
 				</a>
 			</section>
 		</footer>
