--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 								<a href="#">Фото и видео</a>
 							</li>
 							<li>
-								<a href="index.html">Логотип</a>
+								<a href="index.html">
+									<img src="img/trigon-logo.png" width="138" height="70" alt="Логотип">
+								</a>
 							</li>
 							<li>
 								<a href="#">Карта штата</a>
