Вернул надпись welcome.....

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					</nav>
 			</header>
 			<main class="container">
+				<p class="welcome">welcome to the gorgeous</p>
 				<h1>Sedona</h1>
 				<img src="img/sedona-welcome.png" width="458" height="352" alt="Welcome Sedona">
 				<h2>Седона — небольшой городок в Фризоне, заслуживающий большего!</h2>
