Вернул "Because the grand canyon sucks!

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<main class="container">
 				<p class="welcome">welcome to the gorgeous</p>
 				<h1>Sedona</h1>
+				<p class="because">&#8220;Because the grand canyon sucks!&#8221;</p>
 				<img src="img/sedona-welcome.png" width="458" height="352" alt="Welcome Sedona">
 				<h2>Седона — небольшой городок в Фризоне, заслуживающий большего!</h2>
 				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
