Картинку svg заменил  на png

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<section class="footer-copyright">
 				<p>Website by</p>
 				<a class="btn" href="https://htmlacademy.ru">
-					<img src="img/html-academy.svg" width="113" height="39" alt="HTML Academy">
+					<img src="img/html-academy.png" width="113" height="39" alt="HTML Academy">
 				</a>
 			</section>
 		</footer>
