--- a/hotels.html
+++ b/hotels.html
@@ -59,7 +59,7 @@
 							</div>
 							<input type="range" name="range" min="0" max="3000" step="100">
 						</div>
-						<button type="submit">Показать</button>
+						<input type="submit">Показать</button>
 					</form>
 				</section>
 				<section class="found">
