--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<input id="number-adult" type="number" name="number-adult">
 						<label for="number-children">Дети</label>
 						<input id="number-children" type="number" name="number-children">
-						<input type="submit">Найти</button>
+						<input type="submit" value="Найти">
 					</form>
 				</section>
 				<img src="img/map.jpg" width="1200" height="593" alt="Карта">
