--- a/hotels.html
+++ b/hotels.html
@@ -63,19 +63,21 @@
 					</form>
 				</section>
 				<section class="found">
-					<p class="found-number">Найдено: 3</p>
-					<p>Сортировка:</p>
-					<ul>
-						<li>
-							<a href="#">По цене</a>
-						</li>
-						<li>
-							<a href="#">По типу</a>
-						</li>
-						<li>
-							<a href="#">По рейтингу</a>
-						</li>
-					</ul>
+					<div class="found-column-left">
+						<p class="found-number">Найдено: 3</p>
+						<p>Сортировка:</p>
+						<ul>
+							<li>
+								<a href="#">По цене</a>
+							</li>
+							<li>
+								<a href="#">По типу</a>
+							</li>
+							<li>
+								<a href="#">По рейтингу</a>
+							</li>
+						</ul>
+					</div>
 					<div class="sorting-img">
 						<a href="#">
 							<img src="img/sorting-increase.png" alt="Сотрировка по возрастанию" width="11" height="10">
@@ -85,14 +87,18 @@
 						</a>
 					</div>
 				</section>
-				<article class="booking">
-					<div class="booking-hotel">
+				<article class="card-description clearfix">
+					<div class="card-hotel">
 						<img src="img/hotel-1.jpg" alt="Amara Resort & Spa" width="135" height="90">
 						<h2>Amara Resort & Spa</h2>
-						<p>Гостиница</p>
-						<p>От 3 500 р.</p>
-						<a href="#">Подробнее</a>
-						<a href="#">Забронировать</a>
+						<div class="detail-description">
+							<p>Гостиница</p>
+							<a href="#">Подробнее</a>
+						</div>
+						<div class="price-booking">
+							<p>От 3 500 р.</p>
+							<a href="#">Забронировать</a>
+					</div>
 					</div>
 					<div class="rating">
 						<img src="img/star.png" alt="Звезда" width="18" height="17">
@@ -102,14 +108,18 @@
 						<p>Рейтинг: 8,5</p>
 					</div>
 				</article>
-				<article class="booking">
-					<div class="booking-hotel">
+				<article class="card-description clearfix">
+					<div class="card-hotel">
 						<img src="img/hotel-2.jpg" alt="Desert Quail Inn" width="135" height="90">
 						<h2>Desert Quail Inn</h2>
-						<p>Мотель</p>
-						<p>От 2 000 р.</p>
-						<a href="#">Подробнее</a>
-						<a href="#">Забронировать</a>
+						<div class="detail-description">
+							<p>Мотель</p>
+							<a href="#">Подробнее</a>
+						</div>
+						<div class="price-booking">
+							<p>От 2 000 р.</p>
+							<a href="#">Забронировать</a>
+						</div>
 					</div>
 					<div class="rating">
 						<img src="img/star.png" alt="Звезда" width="18" height="17">
@@ -117,14 +127,18 @@
 						<p>Рейтинг: 8,9</p>
 					</div>
 				</article>
-				<article class="booking">
-					<div class="booking-hotel">
+				<article class="card-description clearfix">
+					<div class="card-hotel">
 						<img src="img/hotel-3.jpg" alt="Villas at Poco Diablo" width="135" height="90">
 						<h2>Villas at Poco Diablo</h2>
-						<p>Апартаменты</p>
-						<p>От 4 000 р.</p>
-						<a href="#">Подробнее</a>
-						<a href="#">Забронировать</a>
+						<div class="detail-description">
+							<p>Апартаменты</p>
+							<a href="#">Подробнее</a>
+						</div>
+						<div class="price-booking">
+							<p>От 4 000 р.</p>
+							<a href="#">Забронировать</a>
+						</div>
 					</div>
 					<div class="rating">
 						<img src="img/star.png" alt="Звезда" width="18" height="17">
