#24 Сетка личного проекта. Исправление1

--- a/hotels.html
+++ b/hotels.html
@@ -8,27 +8,27 @@
 	<body>
 		<div class="content">
 			<header class="main-header">
-					<nav class="main-navigation">
-						<ul>
-							<li>
-								<a href="#">Информация</a>
-							</li>
-							<li>
-								<a href="#">Фото и видео</a>
-							</li>
-							<li>
-								<a href="index.html">
-									<img src="img/trigon-logo.png" width="138" height="70" alt="Логотип">
-								</a>
-							</li>
-							<li>
-								<a href="#">Карта штата</a>
-							</li>
-							<li>
-								<a href="hotels.html">Гостиницы</a>
-							</li>
+				<nav class="main-navigation">
+					<ul>
+						<li>
+							<a href="#">Информация</a>
+						</li>
+						<li>
+							<a href="#">Фото и видео</a>
+						</li>
+						<li class="logo">
+							<a href="index.html">
+								<img src="img/trigon-logo.png" width="145" height="75" alt="Логотип">
+							</a>
+						</li>
+						<li>
+							<a href="#">Карта штата</a>
+						</li>
+						<li>
+							<a href="hotels.html">Гостиницы</a>
+						</li>
 						</ul>
-					</nav>
+				</nav>
 			</header>
 			<main class="container">
 				<section class="form">
@@ -65,7 +65,7 @@
 				<section class="found">
 					<div class="found-column-left">
 						<p class="found-number">Найдено: 3</p>
-						<p>Сортировка:</p>
+						<p class="sorting">Сортировка:</p>
 						<ul>
 							<li>
 								<a href="#">По цене</a>
@@ -87,17 +87,21 @@
 						</a>
 					</div>
 				</section>
-				<article class="card-description clearfix">
+				<article class="card-description">
 					<div class="card-hotel">
 						<img src="img/hotel-1.jpg" alt="Amara Resort & Spa" width="135" height="90">
-						<h2>Amara Resort & Spa</h2>
-						<div class="detail-description">
-							<p>Гостиница</p>
-							<a href="#">Подробнее</a>
+						<div class="card-hotel-desc">
+							<h2 class="desc-top">Amara Resort & Spa</h2>
+							<div class="desc-bottom">
+								<div class="detail-description">
+									<p>Гостиница</p>
+									<a href="#">Подробнее</a>
+								</div>
+								<div class="price-booking">
+									<p>От 3 500 р.</p>
+									<a href="#">Забронировать</a>
+							</div>
 						</div>
-						<div class="price-booking">
-							<p>От 3 500 р.</p>
-							<a href="#">Забронировать</a>
 					</div>
 					</div>
 					<div class="rating">
@@ -108,17 +112,21 @@
 						<p>Рейтинг: 8,5</p>
 					</div>
 				</article>
-				<article class="card-description clearfix">
+				<article class="card-description">
 					<div class="card-hotel">
 						<img src="img/hotel-2.jpg" alt="Desert Quail Inn" width="135" height="90">
-						<h2>Desert Quail Inn</h2>
-						<div class="detail-description">
-							<p>Мотель</p>
-							<a href="#">Подробнее</a>
-						</div>
-						<div class="price-booking">
-							<p>От 2 000 р.</p>
-							<a href="#">Забронировать</a>
+						<div class="card-hotel-desc">
+							<h2 class="desc-top">Desert Quail Inn</h2>
+							<div class="desc-bottom">
+								<div class="detail-description">
+									<p>Мотель</p>
+									<a href="#">Подробнее</a>
+								</div>
+								<div class="price-booking">
+									<p>От 2 000 р.</p>
+									<a href="#">Забронировать</a>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="rating">
@@ -127,17 +135,21 @@
 						<p>Рейтинг: 8,9</p>
 					</div>
 				</article>
-				<article class="card-description clearfix">
+				<article class="card-description">
 					<div class="card-hotel">
-						<img src="img/hotel-3.jpg" alt="Villas at Poco Diablo" width="135" height="90">
-						<h2>Villas at Poco Diablo</h2>
-						<div class="detail-description">
-							<p>Апартаменты</p>
-							<a href="#">Подробнее</a>
-						</div>
-						<div class="price-booking">
-							<p>От 4 000 р.</p>
-							<a href="#">Забронировать</a>
+							<img src="img/hotel-3.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+						<div class="card-hotel-desc">
+							<h2 class="desc-top">Villas at Poco Diablo</h2>
+							<div class="desc-bottom">
+								<div class="detail-description">
+									<p>Апартаменты</p>
+									<a href="#">Подробнее</a>
+								</div>
+								<div class="price-booking">
+									<p>От 4 000 р.</p>
+									<a href="#">Забронировать</a>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="rating">
