Декоративные элементы. Часть 1

--- a/hotels.html
+++ b/hotels.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>Выбор гостиницы в Седоне</title>
 	</head>
@@ -25,13 +27,13 @@
 							<a href="#">Карта штата</a>
 						</li>
 						<li>
-							<a href="hotels.html">Гостиницы</a>
+							<a href="hotels.html" class="active">Гостиницы</a>
 						</li>
 						</ul>
 				</nav>
 			</header>
 			<main class="container">
-				<section class="form">
+				<section class="form-hotels">
 					<form action="#" method="post">
 						<div class="infrastructure">
 							<h2>Инфраструктура:</h2>
